# orchestra-rag

./: .env.example  .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  locustfile.py  pyproject.toml  requirements-min.txt  requirements-train.txt  requirements.txt
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: ed5d1a7f84c0_initial_schema.py
data/sample_corpus/: company_overview.md  conductor_platform.md  engineering_handbook.md  hr_policies.md  product_atlas7.md
deploy/helm/orchestra-rag/: Chart.yaml  values.yaml
deploy/helm/orchestra-rag/templates/: deployment.yaml
deploy/k8s/: deployment.yaml  ingress.yaml
orchestra/: __init__.py  app.py  cli.py  config.py  llm.py  observability.py  orchestrator.py  reliability.py  security.py  worker.py
orchestra/agents/: __init__.py  base.py  roles.py
orchestra/api/: __init__.py  server.py
orchestra/api/web/: app.js  index.html  style.css
orchestra/db/: __init__.py  models.py  session.py
orchestra/eval/: __init__.py  harness.py  questions.json
orchestra/ml/: __init__.py  adapters.py  bi_encoder.py  cross_encoder.py  data.py  device.py  eval.py  hnsw.py  onnx_export.py  tokenizer.py  train_biencoder.py  train_cross.py  transformer.py
orchestra/ml/checkpoints/: bi_encoder.onnx  bi_encoder.pt  cross_encoder.pt  tokenizer.json  tokenizer_meta.json
orchestra/rag/: __init__.py  chunking.py  embeddings.py  hybrid.py  loaders.py  pipeline.py  rerank.py  sparse.py  vectorstore.py
scripts/: eval_report.py  scale_up_colab.py  train_ml.py  verify_integration.py
tests/: conftest.py  test_api.py  test_chunking.py  test_cli.py  test_db.py  test_embeddings.py  test_eval.py  test_hybrid.py  test_loaders.py  test_ml.py  test_orchestrator.py  test_pipeline.py  test_reliability.py  test_security.py  test_sparse.py  test_vectorstore.py  test_worker.py
