[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "orchestra-rag"
version = "0.1.0"
description = "Multi-agent orchestration grounded by a shared RAG knowledge base."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "OCT0PUSPR" }]
keywords = ["rag", "multi-agent", "orchestration", "llm", "anthropic", "claude"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

# Light core dependencies — enough for the offline mock demo, CLI, API, tests.
dependencies = [
    "anthropic>=0.40.0",
    "httpx>=0.27.0",
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.2.0",
    "numpy>=1.24.0",
    "rich>=13.0.0",
    "sse-starlette>=2.0.0",
    "python-dotenv>=1.0.0",
    "pypdf>=4.0.0",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
ml = [
    "sentence-transformers>=2.6.0",
    "chromadb>=0.4.24",
    "transformers>=4.40.0",
    "torch>=2.2.0",
]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.4.0",
]

[project.scripts]
orchestra = "orchestra.cli:main"

[project.urls]
Homepage = "https://github.com/OCT0PUSPR/orchestra-rag"
Repository = "https://github.com/OCT0PUSPR/orchestra-rag"

[tool.setuptools.packages.find]
include = ["orchestra*"]

[tool.setuptools.package-data]
"orchestra.api" = ["web/*.html", "web/*.css", "web/*.js"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]
